force-app/main/default/objects/QuoteLineItem__c/QuoteLineItem__c.object-meta.xml
<CustomObject>
    <label>QuoteLineItem</label>
    <nameField>
        <displayFormat>QLI-{000}</displayFormat>
        <label>QuoteLineItem No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuoteLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>