force-app/main/default/objects/QuoteLineItem__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <formula>IF(ISPICKVAL( Discount_Type__c ,&apos;Amount&apos; ) , Unit_Price__c - Discount_Value__c , ((100 - Discount_Value__c ) / 100) * Unit_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>