force-app/main/default/objects/QuoteLineItem__c/fields/Quotes__c.field-meta.xml
<CustomField>
    <fullName>Quotes__c</fullName>
    <label>Quotes</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>QuoteLineItems</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>