force-app/main/default/objects/QuoteLineItem__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <label>SGST</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>